# Pulsar

./: .gitignore  Tauri额外配置清单.md  biome.json  components.json  index.html  package.json  stats.html  test.ts  vite.config.ts
docs/: index.md
scripts/: add-path-header.mjs  rename-sidecar.mjs  scan.mjs
src/: App.vue  declare.d.ts  f.js  main.ts
src-sidecar/: aiService.ts  index.ts  model-hydration.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: backup.rs  error.rs  lib.rs  proxy_server.rs  remote_service.rs  script_manager.rs  secrets_manager.rs  sidecar_manager.rs
src/ai/: index.ts  model-hydration.ts
src/components/: MonacoEditor.vue
src/components/EnvironmentSidebar/: ContentRouter.vue  manifest.types.ts
src/components/ResourceSidebar/: ChatController.vue  ContentRouter.vue  ManifestEditor.vue  ResourceSelector.vue  VisualController.vue  文件夹结构
src/components/SchemaRenderer/: SchemaRenderer.types.ts  SchemaRenderer.vue  schemaRenderer.doc.txt
src/components/common/: LayoutTeleport.vue
src/composables/: index.ts  useAvatar.ts  useBackground.ts  useBackgroundDisplay.ts  useComponent.ts  useExecuteContext.ts  useLocalManifest.ts  useModelConfig.ts  useResourceFolder.ts  useResourceSnapshot.ts  useSetting.ts
src/lib/: WebSearchService.ts
src/resources/: FileRenderer.vue  SemanticType.ts  Tester.vue  shared.types.ts
src/schema/: CharacterLibrary.vue  FileRenderer.vue  SemanticType.ts  Tester.vue  shared.types.ts
src/styles/: index.css
src/utils/: customFetch.ts  getSetting.ts  monacoCore.ts  platform.ts
(+183 files in other folders)
