[package]
name = "pulsar"
version = "0.1.0"
description = "pulsar"
authors = ["nullstarrysky"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pulsar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-upload = "2"
thiserror = "1.0"
tauri-plugin-store = "2"
tauri-plugin-websocket = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
reqwest = "0.12.24"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
dashmap = "5"
chrono = { version = "0.4.42", features = ["serde"] }
walkdir = "2.5.0"
zip = "6.0.0"
log = "0.4.28"
url = "2.5.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.0.0"
